<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_nav_graph"
    app:startDestination="@id/dashboardFragment">

    <fragment
        android:id="@+id/dashboardFragment"
        android:name="com.example.minibooklibrary.ui.dashboard.DashboardFragment"
        android:label="@string/tab_dashboard"
        tools:layout="@layout/fragment_dashboard">
        <action
            android:id="@+id/action_dashboard_to_addEdit"
            app:destination="@id/addEditBookFragment" />
        <action
            android:id="@+id/action_dashboard_to_detail"
            app:destination="@id/bookDetailFragment" />
        <action
            android:id="@+id/action_dashboard_to_library"
            app:destination="@id/bookListFragment" />
    </fragment>

    <fragment
        android:id="@+id/bookListFragment"
        android:name="com.example.minibooklibrary.ui.books.list.BookListFragment"
        android:label="@string/tab_library"
        tools:layout="@layout/fragment_book_list">
        <action
            android:id="@+id/action_library_to_detail"
            app:destination="@id/bookDetailFragment" />
        <action
            android:id="@+id/action_library_to_addEdit"
            app:destination="@id/addEditBookFragment" />
    </fragment>

    <fragment
        android:id="@+id/bookDetailFragment"
        android:name="com.example.minibooklibrary.ui.books.detail.BookDetailFragment"
        android:label="@string/detail_title"
        tools:layout="@layout/fragment_book_detail">
        <argument
            android:name="bookId"
            app:argType="long" />
        <action
            android:id="@+id/action_detail_to_addEdit"
            app:destination="@id/addEditBookFragment" />
    </fragment>

    <fragment
        android:id="@+id/addEditBookFragment"
        android:name="com.example.minibooklibrary.ui.books.edit.AddEditBookFragment"
        android:label="@string/addedit_add_title"
        tools:layout="@layout/fragment_add_edit_book">
        <argument
            android:name="bookId"
            android:defaultValue="0"
            app:argType="long" />
    </fragment>

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.example.minibooklibrary.ui.settings.SettingsFragment"
        android:label="@string/tab_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>
